// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TreeSelect component should render 1`] = `
<div
  className="dropdown-container"
>
  <button
    className="button dropdown"
    onClick={[Function]}
    type="button"
  >
    Select
  </button>
  <div
    className="dropdown-menu"
  >
    <div
      className="dropdown-menu__panel"
    >
      <ul
        className=""
      >
        <li
          className="branch"
        >
          <button
            className=""
            onClick={[Function]}
            type="button"
          >
            Item 1
          </button>
          <ul
            className=""
          >
            <li
              className=""
            >
              <button
                className=""
                onClick={[Function]}
                type="button"
              >
                Item 1a
              </button>
            </li>
            <li
              className="branch"
            >
              <button
                className=""
                onClick={[Function]}
                type="button"
              >
                Item 1b
              </button>
              <ul
                className=""
              >
                <li
                  className=""
                >
                  <button
                    className=""
                    onClick={[Function]}
                    type="button"
                  >
                    Item 1b A
                  </button>
                </li>
                <li
                  className=""
                >
                  <button
                    className=""
                    onClick={[Function]}
                    type="button"
                  >
                    Item 1b B
                  </button>
                </li>
              </ul>
            </li>
          </ul>
        </li>
        <li
          className=""
        >
          <button
            className=""
            onClick={[Function]}
            type="button"
          >
            Some Item 2
          </button>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`TreeSelect component with filter should render 1`] = `
<div
  className="dropdown-container"
>
  <button
    className="button dropdown"
    onClick={[Function]}
    type="button"
  >
    Select
  </button>
  <div
    className="dropdown-menu"
  >
    <div
      className="autocomplete-container"
    >
      <form
        onSubmit={[Function]}
      >
        <span
          className="search-input"
        >
          <input
            onChange={[Function]}
            onKeyDown={[Function]}
            placeholder=""
            props={Object {}}
            type="text"
            value=""
          />
          <test-file-stub
            className="search-input__icon"
            height={14}
            width={14}
          />
        </span>
      </form>
      <div
        className="autocomplete-menu"
      >
        <div
          className="dropdown-menu__panel"
        />
      </div>
    </div>
    <div
      className="dropdown-menu__panel"
    >
      <ul
        className=""
      >
        <li
          className="branch"
        >
          <button
            className=""
            onClick={[Function]}
            type="button"
          >
            Item 1
          </button>
          <ul
            className=""
          >
            <li
              className=""
            >
              <button
                className=""
                onClick={[Function]}
                type="button"
              >
                Item 1a
              </button>
            </li>
            <li
              className="branch"
            >
              <button
                className=""
                onClick={[Function]}
                type="button"
              >
                Item 1b
              </button>
              <ul
                className=""
              >
                <li
                  className=""
                >
                  <button
                    className=""
                    onClick={[Function]}
                    type="button"
                  >
                    Item 1b A
                  </button>
                </li>
                <li
                  className=""
                >
                  <button
                    className=""
                    onClick={[Function]}
                    type="button"
                  >
                    Item 1b B
                  </button>
                </li>
              </ul>
            </li>
          </ul>
        </li>
        <li
          className=""
        >
          <button
            className=""
            onClick={[Function]}
            type="button"
          >
            Some Item 2
          </button>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
